Bug 511381 - disabling look and feel via kiosk - still visible in quick settings
Summary: disabling look and feel via kiosk - still visible in quick settings
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.5.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-10-30 14:53 UTC by veldorathedragon
Modified: 2025-12-18 13:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description veldorathedragon 2025-10-30 14:53:00 UTC
SUMMARY
When setting `kcm_lookandfeel` to `false` in `/etc/xdg/kdeglobals`, the setting for global themes in Colors & Themes is hidden, which is intended. However in "Quick Settings" the option for "Global Theme" is still visible, but clicking on the button does in fact do nothing.

STEPS TO REPRODUCE
1. Set `kcm_lookandfeel` to `false` in `/etc/xdg/kdeglobals`
2. logout and login again (or "restart" plasmashell via `killall plasmashell; kstart plasmashell`)
3. open "System Settings" and navigate to "Quick Settings"

OBSERVED RESULT
Under "More appearance settings", "Global Theme" is still visible

EXPECTED RESULT
Under "More appearance settings", "Global Theme" should also be hidden like in "Colors & Themes"

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux 6.17.5
KDE Plasma Version: 6.5.0
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2025-10-31 12:37:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3270
Comment 2 Nicolas Fella 2025-12-18 13:30:37 UTC
Git commit a18f0df737b20eda5eb2f054c05eda920dcdaacc by Nicolas Fella.
Committed on 18/12/2025 at 13:30.
Pushed by nicolasfella into branch 'master'.

[kcms/landingpage] Don't show unauthorized KCMs

Opening them won't work, so don't even show them

M  +10   -0    kcms/landingpage/landingpage.cpp
M  +5    -1    kcms/landingpage/ui/main.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/a18f0df737b20eda5eb2f054c05eda920dcdaacc
Comment 3 Nicolas Fella 2025-12-18 13:32:37 UTC
Git commit a53d9b07ce30577a7c7251d40b8642f8bd0d5e43 by Nicolas Fella.
Committed on 18/12/2025 at 13:32.
Pushed by nicolasfella into branch 'Plasma/6.5'.

[kcms/landingpage] Don't show unauthorized KCMs

Opening them won't work, so don't even show them
(cherry picked from commit a18f0df737b20eda5eb2f054c05eda920dcdaacc)

M  +10   -0    kcms/landingpage/landingpage.cpp
M  +5    -1    kcms/landingpage/ui/main.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/a53d9b07ce30577a7c7251d40b8642f8bd0d5e43