[kcms/landingpage] Don't show unauthorized KCMs

Opening them won't work, so don't even show them

BUG: 511381